Bugfix: obs grids were overlapping ID Pl and RG notices.

--- a/public/stylesheets/observations.css
+++ b/public/stylesheets/observations.css
@@ -377,6 +377,7 @@
 .observations.grid .observation:hover .actions .counts {
   opacity: 1;
 }
+.observations.grid .idandrg .id_please_notice {top: 1.5em;}
 .observations.grid .species_guess a {
   left: 0;
   bottom: 0;
